# MusicService

./: .flake8  .gitignore  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: test.yaml
src/: index.py
src/adapters/graphql/: __init__.py  context.py  queries.py
src/adapters/s3/: blob.py
src/adapters/sql/: connection.py  consts.py  uow.py
src/config/: app_factory.py  dependencies.py  ioc_container.py  logger.py  settings.py
src/domain/builders/: album.py  artist.py  base.py  track.py
src/domain/common/: consts.py  exceptions.py  mappers.py
src/domain/dtos/: album.py  artist.py  base.py  inputs.py  mixins.py  outputs.py  track.py
src/domain/entities/: album.py  artist.py  base.py  playlist.py  track.py
src/domain/errors/: album.py  artist.py  base.py  otp_code.py  token.py  track.py  user.py
src/domain/events/: event_handler.py  event_notifier.py  events.py
src/domain/exceptions/: album.py  artist.py  bad_request.py  base.py  conflict.py  not_found.py  otp_code.py  permission_denied.py  token.py  track.py  user.py
src/domain/factories/: album.py  artist.py  base.py  playlist.py  track.py
src/domain/mappers/: album.py  atrist.py  track.py
src/domain/repositories/: album.py  artist.py  playlist.py  track.py
src/domain/usecases/: authenticate_user.py  base.py  create_album.py  get_album_list.py  get_albums.py  get_artist_list.py  get_artists.py  get_chart.py  get_new_albums.py  get_new_releases.py  listen_track.py  play_track.py  refresh_jwt_pair.py  register_artist.py  register_created_artist.py  search_track.py  send_otp_code.py  sign_in.py  update_artist.py  upload_album.py  upload_reviewed_album.py  upload_track.py  verify_user.py
src/domain/utils/: blob.py  files.py  moderation.py  search.py  uow.py
src/domain/values/: audio_url.py  avatar_url.py  cover_url.py  description.py  duration.py  (+5 more)
src/utils/: strings.py
tests/: conftest.py
tests/domain/: conftest.py
tests/entities/: test_album.py  test_track.py
tests/mocks/: album_repository.py  artist_repository.py  blob_storage.py  track_repository.py  uow.py
tests/usecases/: test_listen_track.py  test_play_track.py  test_upload_track.py
tests/values/: test_audio_url.py  test_cover_url.py
(+190 files in other folders)
