[tool.poetry]
name = "musicservice"
version = "0.1.0"
description = ""
authors = ["Andrey <ykt_andrey@mail.ru>"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
aiofiles = "^24.1.0"
isort = "^5.13.2"
aioboto3 = "^13.1.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.237.3"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "src.index:run_server"
